<resources>
    <string name="app_name">Labs20221-Gr6</string>
    <string name="S1">Arley Santiago Tangarife Velasquez\nRoy Kleyder Maestre Ruda\nJuan Camilo Morales Vanegas</string>
    <!-- Contact Info Activity -->
    
    <string name="telephone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="email">Correo</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="contact_info">Información de Contacto</string>
    <string name="next">Siguiente</string>
    <string name="wrong_email">No es una dirección de correo valida</string>
    <string name="wrong_phone">No es un número de télefono valido</string>

    <string-array name="latam_countries">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guayana Francesa</item>
        <item>Granada</item>
        <item>Guatemala</item>
        <item>Guayana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>Mexico</item>
        <item>Nicaragua</item>
        <item>Paraguay</item>
        <item>Panamá</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>República Dominicana</item>
        <item>Surinam</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="colombia_cities">
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
        <item>Cucuta</item>
        <item>Pereira</item>
        <item>Bucaramanga</item>
        <item>Valledupar</item>
        <item>Ibagué</item>
        <item>Villavicencio</item>
        <item>Santa Marta</item>
        <item>Montería</item>
        <item>Manizales</item>
        <item>Pasto</item>
        <item>Neiva</item>
        <item>Armenia</item>
        <item>Popayán</item>
        <item>Sincelejo</item>
        <item>Tunja</item>
        <item>Yopal</item>
        <item>Riohacha</item>
        <item>Florencia</item>
        <item>Quibdó</item>
        <item>Arauca</item>
        <item>San Andrés</item>
        <item>San José del Guaviare</item>
        <item>Leticia</item>
        <item>Mitú</item>
        <item>Mocoa</item>
        <item>Inirida</item>
        <item>Puerto Carreño</item>
        <item>Bogotá</item>
    </string-array>

    <string name="Titulo">Informacion Personal</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Sexo">Sexo</string>
    <string name="Hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="FechaDeNacimiento">Fecha De Nacimiento</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Cambiar">Cambiar</string>

    <string name="form_required_field">Campo Requerido</string>
    <string name="required_field">Campo Requerido</string>
    <string-array name="opciones">
        <item>Grado De Escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universidad</item>
        <item>Otro</item>

    </string-array>


</resources>
